# codetorio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/engine/: Engine.h  IEngine.h
engine/include/factory/: IFactory.h  Level0Factory.h  Level1Factory.h
engine/include/item/: IItem.h  IItemRecipe.h
engine/include/thread/: ITask.h  IThreadable.h
engine/include/vault/: Vault.h
engine/src/engine/: Engine.cpp
engine/src/factory/: Level0Factory.cpp  Level1Factory.cpp
engine/src/vault/: Vault.cpp
